Closed
Bug 18482
Opened 26 years ago
Closed 25 years ago
MIW can't handle boot volume names containing slashes
Categories
(SeaMonkey :: Installer, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M18
People
(Reporter: agracebush, Assigned: samir_bugzilla)
References
Details
(Whiteboard: [nsbeta3+])
Steps to reproduce:
1. download the Mac Installer from
ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-11-10-08-M12/MacInst
aller-M12.sea.bin
2. Unstuff the installer
3. Click on installer, check appropriate boxes (accept, typical, use default
folder, install)
Actual results: Barber pole started to turn, message was 'extracting setup
files' and then back to instller icon
Same behavior when only browser was chosen for installation
Expected results: Installation of browser and mail/news
build 1999111008
Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•26 years ago
|
||
I can't reproduce this on my machine. I used the build you cited as well as:
ftp://sweetlou/.../1999-11-10-11-M12/MacInstaller-M12.sea.bin
Will stop by.
Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → INVALID
Assignee | ||
Comment 2•26 years ago
|
||
Until libjar gets fixed to truely undertstand the Mac's notion of a file, we
cannot support folder names with slashes ("/") in them. Unforunately this bug
bit Grace. The installation completedly successfully when she removed the slash
from the folder name in the path she was installing to. Marking INVALID. This
needs to be release noted.
Reporter | ||
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 3•26 years ago
|
||
added to release notes-that bite hurt!
Assignee | ||
Comment 5•26 years ago
|
||
I agree with Kathy that this bug should not be invalid. It is contingent upon
bug 8136, but, 8136 only covers libjar, not its clients. Reopening.
Assignee | ||
Updated•26 years ago
|
Resolution: INVALID → ---
Target Milestone: M14
Assignee | ||
Updated•26 years ago
|
Target Milestone: M14 → M16
Assignee | ||
Updated•26 years ago
|
Summary: MacInstaller failing after 'extracting setup files' → MIW can't handle slashes in target folder path
Comment 7•26 years ago
|
||
what is the state of this bug given the nsifile landing that happened? is #8136
relevant (now resolved wontfix)?
Assignee | ||
Comment 8•26 years ago
|
||
I reopened 8136 which was originally assigned to me but dougt took it on. If
there is much debate I'll just take that bug back and add some #ifdef XP_MAC
hackery to help resolve this sooner.
Assignee | ||
Updated•25 years ago
|
Target Milestone: M16 → M17
Assignee | ||
Comment 10•25 years ago
|
||
*** Bug 46363 has been marked as a duplicate of this bug. ***
Comment 11•25 years ago
|
||
Just for the record, I'd like to note that Bug 46363, which eventually proved to
be a special case of this one, means that a few Mac users will not be able to
install Mozilla at all -- until they change their volume name. If they don't
change it back after installation, applications that remember hardwired
pathnames, including Mozilla itself, will get confused.
Talkback data records volume names by default, I believe, so if you want to, you
could mine past talkback data gather stats to assess what percentage of users
have slashes in their volume names. I had named mine "PPC 8600/250".
Comment 12•25 years ago
|
||
Nominating for nsbeta3; Mac users often have slashes in their hard drive names,
and the result of this bug is that the application, and those users will be
unable to readily use the application as a result.
Keywords: nsbeta3
Comment 13•25 years ago
|
||
...we've also done quite a bit of work to make sure that the application *
launches* in a slashed path, so it would be a shame if it was put to waste. ;)
Assignee | ||
Updated•25 years ago
|
Whiteboard: [nsbeta3+]
Assignee | ||
Updated•25 years ago
|
Status: REOPENED → ASSIGNED
Assignee | ||
Comment 14•25 years ago
|
||
You *can* have slashes in your target folder path. However, the real bug is
that you can't have slashes in your boot volume name. No fix to bug 8136
required. We can fix this in the wizard itself.
Summary: MIW can't handle slashes in target folder path → MIW can't handle boot volume names containing slashes
Assignee | ||
Comment 15•25 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
Comment 16•25 years ago
|
||
MacMozillaInstaller.sea.bin version of 17-Aug-2000 21:55 still gives "System
error -35" when volume name is "Kanef's PPC 8600/250". Is that built from the
latest tree? The Mac version resource says "5.0 M11".
Assignee | ||
Comment 17•25 years ago
|
||
Grace,
Do you see this problem with the same build? We need to address this build
glitch if it does exist.
Reporter | ||
Comment 18•25 years ago
|
||
I haven't tested this yet- confused by comment above- regarding / in boot volume
name- is that true?
How do I change boot volume name?
Assignee | ||
Comment 19•25 years ago
|
||
To change your boot volume name, turn off file sharing and then edit the volume
name as you would edit any file or folder name through the Finder interface.
Reporter | ||
Updated•25 years ago
|
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 20•25 years ago
|
||
verifying in build 2000081804M18
Comment 21•25 years ago
|
||
I concur; the installer dated 18-Aug-2000 10:20 works under the same conditions
that yesterday's failed.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•