Can now install to Macs with boot volumes that have slashes in their names.[nsbeta3+ b=18482; r=ssu; a=dveditz]